bootstrap de merde responsive de merde

--- a/exercice.html
+++ b/exercice.html
@@ -39,8 +39,12 @@
                     <footer class="col-12 bisque h-10 rounded-3"></footer>
             </div>
         </div>
-        
     </div>
+    <div class="container-fluid bg-primary vh-100 col-11">
+        <div class="row h-100">
+            <div class="row h-100">
+               <nav class="col-12 bleu-clair"></nav> 
+            </div>
 
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
