--- a/layout.html
+++ b/layout.html
@@ -49,15 +49,15 @@
         <div class="row h-100 align-items-center">
             <div class="col-12 h-100">
                 <div class="row h-95 justify-content-between mt-3">
-                    <div class="col-3 orange border-2 border-dark border">
+                    <div class="col-lg-3 col-sm-12 orange border-2 border-dark border">
                     
                     </div>
-                    <div class="col-8 mx-auto">
+                    <div class="col-lg-8 col-sm-12 mx-auto">
                         <div class="row h-100 justify-content-between align-content-between">
-                            <div class="col-12 cyan h-30 border-2 border-dark border">column</div>
-                            <div class="col-4 pink h-30 border-2 border-dark border">column</div>
-                            <div class="col-7 lime h-30 border-2 border-dark border">column</div>
-                            <div class="col-12 vert-degeu h-30 border-2 border-dark border">column</div>
+                            <div class="col-lg-12 cyan h-30 border-2 border-dark border">column</div>
+                            <div class="col-lg-4 col-sm-12 order-2 order-lg-1 pink h-30 border-2 border-dark border">column</div>
+                            <div class="col-lg-7 col-sm-12 order-1 order-lg-2 lime h-30 border-2 border-dark border">column</div>
+                            <div class="col-lg-12 col-sm-12 order-3 order-lg-3 vert-degeu h-30 border-2 border-dark border">column</div>
                         </div>
                     </div>
                 </div>
